## [Unreleased 0.2.4]
### Updated
- Fixed group regex to handle pets
- And them promptly changed pets (class == mob) to be excluded from the display

## [Unreleased 0.2.3]
### Added
- Status column in group data display
- Version number in title bar

## [Unreleased 0.2.2]
### Added
- vscode path fixes

## [Unreleased 0.2.1]
### Added
- Divided UI updates into "fast" (xp total) and "rate limited" (xp/hr). Rate limited updates are limited to 1/s.
- Implemented 'run.py' to streamline startup process

### Updated
- Fixed UI labels

## [Unreleased 0.2]
### Added
- Group status display

### Removed
- XP Events log

### Updated
- Changed from "XPTracker" to "Wingman"