@@ -7,8 +7,8 @@
     <list default="true" id="4993b73e-7e36-4adc-940b-47920e30c334" name="Changes" comment="">
       <change beforePath="$PROJECT_DIR$/.idea/workspace.xml" beforeDir="false" afterPath="$PROJECT_DIR$/.idea/workspace.xml" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/changelog.txt" beforeDir="false" afterPath="$PROJECT_DIR$/changelog.txt" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/Wingman/core/parser.py" beforeDir="false" afterPath="$PROJECT_DIR$/src/Wingman/core/parser.py" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/Wingman/tests/test_parser.py" beforeDir="false" afterPath="$PROJECT_DIR$/src/Wingman/tests/test_parser.py" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/src/Wingman/core/session.py" beforeDir="false" afterPath="$PROJECT_DIR$/src/Wingman/core/session.py" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/src/Wingman/gui/app.py" beforeDir="false" afterPath="$PROJECT_DIR$/src/Wingman/gui/app.py" afterDir="false" />
     </list>
     <option name="SHOW_DIALOG" value="false" />
     <option name="HIGHLIGHT_CONFLICTS" value="true" />
